# svo2

./: .gitmodules  CMakeLists.txt
samples/: detect.py  handle.py  test.py
svo/: CMakeLists.txt
svo/include/svo/: bundle_adjustment.h  config.h  depth_filter.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  global.h  initialization.h  map.h  matcher.h  point.h  pose_optimizer.h  reprojector.h  sparse_img_align.h
svo/src/: bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_img_align.cpp
svo/test/: test_depth_filter.cpp  test_feature_detection.cpp  test_matcher.cpp  test_pipeline.cpp  test_pose_optimizer.cpp  test_sparse_img_align.cpp
svo_python/: CMakeLists.txt  root.py
svo_python/include/: cameras.h  handlers.h  torch_frame.h  visualize.h
svo_python/src/: cameras.cpp  handlers.cpp  svo.cpp  torch_frame.cpp  visualize.cpp
svo_ros/launch/: test_mynteye.launch
svo_ros/param/: vo_accurate.yaml
svo_ros/src/: vo_node.cpp
